--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -583,7 +583,11 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-var-dart-6ulcustomboard-emmc-sd-card.dtb \
 	imx6ul-var-dart-6ulcustomboard-emmc-wifi.dtb \
 	imx6ul-var-dart-6ulcustomboard-nand-sd-card.dtb \
-	imx6ul-var-dart-6ulcustomboard-nand-wifi.dtb
+	imx6ul-var-dart-6ulcustomboard-nand-wifi.dtb \
+	imx6ul-var-som-concerto-board-emmc-sd-card.dtb \
+	imx6ul-var-som-concerto-board-emmc-wifi.dtb \
+	imx6ul-var-som-concerto-board-nand-sd-card.dtb \
+	imx6ul-var-som-concerto-board-nand-wifi.dtb
 dtb-$(CONFIG_SOC_IMX6ULL) += \
 	imx6ull-14x14-ddr3-arm2.dtb \
 	imx6ull-14x14-ddr3-arm2-adc.dtb \
@@ -614,7 +618,11 @@ dtb-$(CONFIG_SOC_IMX6ULL) += \
 	imx6ull-var-dart-6ulcustomboard-emmc-sd-card.dtb \
 	imx6ull-var-dart-6ulcustomboard-emmc-wifi.dtb \
 	imx6ull-var-dart-6ulcustomboard-nand-sd-card.dtb \
-	imx6ull-var-dart-6ulcustomboard-nand-wifi.dtb
+	imx6ull-var-dart-6ulcustomboard-nand-wifi.dtb \
+	imx6ull-var-som-concerto-board-emmc-sd-card.dtb \
+	imx6ull-var-som-concerto-board-emmc-wifi.dtb \
+	imx6ull-var-som-concerto-board-nand-sd-card.dtb \
+	imx6ull-var-som-concerto-board-nand-wifi.dtb
 dtb-$(CONFIG_SOC_IMX6SLL) += \
 	imx6sll-lpddr2-arm2.dtb \
 	imx6sll-lpddr3-arm2.dtb \
