--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq-var-dart-common.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq-var-dart-common.dtsi
@@ -913,7 +913,7 @@
 &wdog1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_wdog>;
-	fsl,wdog_b;
+	fsl,ext-reset-output;
 	status = "okay";
 };
 
