imx8mm-var-dart: Fix obsolete watchdog DTS property

--- a/arch/arm64/boot/dts/freescale/fsl-imx8mm-var-dart.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mm-var-dart.dts
@@ -700,7 +700,6 @@
 			};
 		};
 	};
-
 };
 
 &i2c2 {
@@ -986,7 +985,7 @@
 &wdog1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_wdog>;
-	fsl,wdog_b;
+	fsl,ext-reset-output;
 	status = "okay";
 };
 
