imx8m-var-dart: Add support for DART-MX8M carrier board rev 1.3
The reset pin of second CSI sensor has changed in carrier board rev 1.3
This board is now default, DTS files for earlier carrier board revisions
now have -cb12 suffix

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -121,15 +121,27 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 fsl-imx8mq-var-dart-emmc-wifi-hdmi.dtb \
 				 fsl-imx8mq-var-dart-emmc-wifi-lvds.dtb \
 				 fsl-imx8mq-var-dart-emmc-wifi-dual-display.dtb \
+				 fsl-imx8mq-var-dart-emmc-wifi-hdmi-cb12.dtb \
+				 fsl-imx8mq-var-dart-emmc-wifi-lvds-cb12.dtb \
+				 fsl-imx8mq-var-dart-emmc-wifi-dual-display-cb12.dtb \
 				 fsl-imx8mq-var-dart-sd-emmc-hdmi.dtb \
 				 fsl-imx8mq-var-dart-sd-emmc-lvds.dtb \
 				 fsl-imx8mq-var-dart-sd-emmc-dual-display.dtb \
+				 fsl-imx8mq-var-dart-sd-emmc-hdmi-cb12.dtb \
+				 fsl-imx8mq-var-dart-sd-emmc-lvds-cb12.dtb \
+				 fsl-imx8mq-var-dart-sd-emmc-dual-display-cb12.dtb \
 				 fsl-imx8mq-var-dart-m4-emmc-wifi-hdmi.dtb \
 				 fsl-imx8mq-var-dart-m4-emmc-wifi-lvds.dtb \
 				 fsl-imx8mq-var-dart-m4-emmc-wifi-dual-display.dtb \
+				 fsl-imx8mq-var-dart-m4-emmc-wifi-hdmi-cb12.dtb \
+				 fsl-imx8mq-var-dart-m4-emmc-wifi-lvds-cb12.dtb \
+				 fsl-imx8mq-var-dart-m4-emmc-wifi-dual-display-cb12.dtb \
 				 fsl-imx8mq-var-dart-m4-sd-emmc-hdmi.dtb \
 				 fsl-imx8mq-var-dart-m4-sd-emmc-lvds.dtb \
-				 fsl-imx8mq-var-dart-m4-sd-emmc-dual-display.dtb
+				 fsl-imx8mq-var-dart-m4-sd-emmc-dual-display.dtb \
+				 fsl-imx8mq-var-dart-m4-sd-emmc-hdmi-cb12.dtb \
+				 fsl-imx8mq-var-dart-m4-sd-emmc-lvds-cb12.dtb \
+				 fsl-imx8mq-var-dart-m4-sd-emmc-dual-display-cb12.dtb
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
 				 fsl-imx8mm-evk-ak4497.dtb \
