--- a/arch/arm64/configs/imx8_var_android_defconfig
+++ b/arch/arm64/configs/imx8_var_android_defconfig
@@ -1049,3 +1049,4 @@ CONFIG_MEMTEST=y
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_SOURCE_ETM4X=y
+CONFIG_CMDLINE_EXTEND_BOOTLOADER=y
