--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -96,6 +96,7 @@ config SND_SOC_FSL_DSP
 	tristate "dsp module support"
 	select SND_SOC_COMPRESS
 	select SND_SOC_FSL_DSP_AUDIOMIX
+	select SND_SOC_FSL_DSP_AUDIO
 	help
 	  Say Y if you want to add hifi 4 support for the Freescale CPUs.
 	  which is a DSP core for audio processing.
@@ -121,6 +122,11 @@ config SND_SOC_FSL_DSP_AUDIOMIX
 	depends on MFD_IMX_AUDIOMIX
 	help
 	  Say Y if you want to add Audio MIX helper for DSP
+
+config SND_SOC_FSL_DSP_AUDIO
+	tristate "Audio DSP helper"
+	help
+	  Say Y if you want to add Audio helper for DSP
 
 config SND_SOC_FSL_XCVR
 	tristate "NXP Audio Transceiver (XCVR) module support"
