ARM: dts: VAR-SOM-6UL: disable rtc interrupt on ConcertoBoard
On ConcertoBoard, the interrupt is not active by default:
the user need to short J14.8 & J14.10 to enable it.

--- a/arch/arm/boot/dts/imx6ul-imx6ull-var-som-concerto-board.dtsi
+++ b/arch/arm/boot/dts/imx6ul-imx6ull-var-som-concerto-board.dtsi
@@ -119,10 +119,12 @@
 		/*
 		 * To actually use this interrupt
 		 * connect pins J14.8 & J14.10 on the Concerto-Board
+		 * and uncomment the following 3 lines
+		 *
+		 * pinctrl-0 = <&pinctrl_rtc>;
+		 * interrupt-parent = <&gpio1>;
+		 * interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
 		 */
-		pinctrl-0 = <&pinctrl_rtc>;
-		interrupt-parent = <&gpio1>;
-		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
 	};
 };
 
