imx8mn-var-som: can: Migrate from MCP25XXFD to MCP251XFD driver
Signed-off-by: Nate Drude <nate.d@variscite.com>

--- a/arch/arm64/boot/dts/freescale/imx8mn-var-som.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mn-var-som.dts
@@ -1104,7 +1104,7 @@
 	/* CAN controller */
 	can0: can@1 {
 		reg = <1>;
-		compatible = "microchip,mcp25xxfd";
+		compatible = "microchip,mcp251xfd";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_can>;
 		clocks = <&can0_osc>;
