--- a/arch/arm64/boot/dts/freescale/imx8mn-var-som.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mn-var-som.dts
@@ -336,9 +336,9 @@
 			>;
 		};
 
-		pinctrl_pmic: pmicirq {
+		pinctrl_pmic: pmicgrp {
 			fsl,pins = <
-				MX8MN_IOMUXC_SD1_DATA6_GPIO2_IO8		0x41
+				MX8MN_IOMUXC_SD1_DATA6_GPIO2_IO8		0x140
 			>;
 		};
 
@@ -602,9 +602,10 @@
 		status = "okay";
 		compatible = "rohm,bd71847";
 		reg = <0x4b>;
+		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_pmic>;
 		interrupt-parent = <&gpio2>;
-		interrupts = <8 GPIO_ACTIVE_LOW>;
+		interrupts = <8 IRQ_TYPE_LEVEL_LOW>;
 		rohm,reset-snvs-powered;
 
 		regulators {
