imx8mn-var-som: Add support for VAR-SOM-MX8M-NANO revision 1.3
VAR-SOM-MX8M-NANO revision 1.3 improves CAN performance by changing
CAN oscillator frequency from 20Mhz to 40Mhz and connecting RX-INT
GPIO pin to MCP2518FD CAN controller to accelerate RX interrupt
processing. Optional TX-INT GPIO is also connected to MCP2518FD but
is currently unused.

The VAR-SOM-MX8M-NANO DTS file imx8mn-var-som.dtsi is now synchronized
with SOM revision 1.3. Follow comments in the file to adjust it to
earlier SOM revisions.

The following changes are required for earlier SOM revisions:

1. Change CAN ocscillator frequency to 20000000
2. Change CAN controller maximum SPI frequency to 10000000
3. Remove CAN controller microchip,rx-int-gpios property
4. Remove RX-INT and and TX-INT GPIOs from CAN controller pins

--- a/arch/arm64/boot/dts/freescale/imx8mn-var-som.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mn-var-som.dtsi
@@ -13,7 +13,8 @@
 	can0_osc: can0_osc {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
-		clock-frequency = <20000000>;
+		/* On SOM revions 1.2 and below the frequency should be 20000000 */
+		clock-frequency = <40000000>;
 		clock-output-names = "can_osc";
 	};
 
@@ -123,7 +124,10 @@
 		clocks = <&can0_osc>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <5 IRQ_TYPE_LEVEL_LOW>;
-		spi-max-frequency = <10000000>;
+		/* On SOM revions 1.2 and below RX-INT GPIO is not available */
+		microchip,rx-int-gpios = <&gpio2 12 GPIO_ACTIVE_LOW>;
+		/* On SOM revions 1.2 and below the spi-max-frequency should be 10000000 */
+		spi-max-frequency = <20000000>;
 		status = "okay";
 	};
 
@@ -188,7 +192,9 @@
 
 	pinctrl_can: cangrp {
 		fsl,pins = <
-			MX8MN_IOMUXC_GPIO1_IO05_GPIO1_IO5		0x1c0
+			MX8MN_IOMUXC_GPIO1_IO05_GPIO1_IO5		0x1c0	/* CAN-INT */
+			MX8MN_IOMUXC_SD2_CD_B_GPIO2_IO12		0x16	/* CAN RX-INT - SOM rev1.3+ only */
+			MX8MN_IOMUXC_GPIO1_IO15_GPIO1_IO15		0x16	/* CAN TX-INT - SOM rev1.3+ only */
 		>;
 	};
 
