--- a/arch/arm64/boot/dts/freescale/imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mq.dtsi
@@ -1330,6 +1330,7 @@
 			power-domains = <&pgc_otg1>;
 			usb3-resume-missing-cas;
 			snps,power-down-scale = <2>;
+			snps,dis_rxdet_inp3_quirk;
 			status = "disabled";
 		};
 
@@ -1363,6 +1364,7 @@
 			power-domains = <&pgc_otg2>;
 			usb3-resume-missing-cas;
 			snps,power-down-scale = <2>;
+			snps,dis_rxdet_inp3_quirk;
 			status = "disabled";
 		};
 
