imx8mp_var_dart: Enable ADIN PHY driver
Signed-off-by: Harshesh Valera <harshesh.v@variscite.com>

--- a/arch/arm64/configs/imx8_var_android_defconfig
+++ b/arch/arm64/configs/imx8_var_android_defconfig
@@ -1176,3 +1176,4 @@ CONFIG_MEMTEST=y
 CONFIG_CMDLINE_EXTEND_BOOTLOADER=y
 CONFIG_REGULATOR_PFUZE100=y
 CONFIG_REGULATOR_TPS62360=y
+CONFIG_ADIN_PHY=y
