imx8_var_defconfig: enable docker requirements
Signed-off-by: FrancescoFerraro <francesco.f@variscite.com>

--- a/arch/arm64/configs/imx8_var_defconfig
+++ b/arch/arm64/configs/imx8_var_defconfig
@@ -96,6 +96,7 @@ CONFIG_NF_CONNTRACK=m
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_FTP=m
 CONFIG_NF_CONNTRACK_TFTP=m
+CONFIG_NETFILTER_XT_MARK=m
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=m
 CONFIG_NETFILTER_XT_TARGET_LOG=m
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
@@ -245,8 +246,8 @@ CONFIG_FEC=y
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_AT803X_PHY=y
 CONFIG_ADIN_PHY=y
+CONFIG_AT803X_PHY=y
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -553,8 +554,8 @@ CONFIG_VIDEO_OV5640=y
 CONFIG_IMX_DPU_CORE=y
 CONFIG_IMX_LCDIF_CORE=y
 CONFIG_IMX_LCDIFV3_CORE=y
-CONFIG_DRM_PANEL_LVDS=y
 CONFIG_DRM=y
+CONFIG_DRM_PANEL_LVDS=y
 CONFIG_DRM_FSL_IMX_LVDS_BRIDGE=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
@@ -791,6 +792,7 @@ CONFIG_ROOT_NFS=y
 CONFIG_NFSD=m
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
+CONFIG_SECURITY=y
 CONFIG_CRYPTO_CRYPTD=m
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
