MXEM-88 arm64: dts: imx8mq: disable USB PHY rxdect at P3
The patch is ported from 10aa0b2

Signed-off-by: FrancescoFerraro <francesco.f@variscite.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
@@ -948,6 +948,7 @@
 			usb3-lpm-capable;
 			snps,has-lpm-erratum;
 			snps,lpm-nyet-threshold = <0xf>;
+			snps,dis_rxdet_inp3_quirk;
 			status = "disabled";
 		};
 	};
@@ -988,6 +989,7 @@
 			snps,power-down-scale = <2>;
 			usb3-resume-missing-cas;
 			usb3-lpm-capable;
+			snps,dis_rxdet_inp3_quirk;
 			status = "disabled";
 		};
 	};
