ARM: configs: imx_v7_var_defconfig: fine tuning
Disable EVBUG module and enable CRYPTO_USER_APIs.

Signed-off-by: Pierluigi Passaro <pierluigi.p@variscite.com>

--- a/arch/arm/configs/imx_v7_var_defconfig
+++ b/arch/arm/configs/imx_v7_var_defconfig
@@ -226,7 +226,6 @@ CONFIG_WL12XX=m
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_RPMSG=y
 CONFIG_KEYBOARD_IMX=y
@@ -612,7 +611,10 @@ CONFIG_CRYPTO_SM4=m
 CONFIG_CRYPTO_TEA=m
 CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_USER_API_HASH=m
+CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
+CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=m
 CONFIG_CRYPTO_DEV_FSL_CAAM=m
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=m
